# SPD

./: CMakeLists.txt  README.md
algorithms/: CMakeLists.txt  CalierAlgorithm.cpp  CalierAlgorithm.hpp  CalierBlocks.cpp  CalierBlocks.hpp  SchrageAlgorithm.cpp  SchrageAlgorithm.hpp  SchrageWithDivisionAlgorithm.cpp  SchrageWithDivisionAlgorithm.hpp  Task.hpp  calierBlocks.cpp
sources/: CMakeLists.txt  calier.cpp  neh.cpp  schrage.cpp  schrageWithDivision.cpp  witi.cpp
